Update,switching to blogs and fixing a few white space issues.

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ img
   color:white;
   border:solid 1px;
   border-radius:10px;
+  padding-bottom:20px;
 
 }
 
@@ -61,7 +62,6 @@ img
 	color:white;
 	/*border:1px solid green;*/
   width:267px;
-  height:267px;
 }
 
 .centerBox
